<resources>
    <string name="app_name">COVID-HELP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_iniciar_sesion">Iniciar sesión</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_anuncios">Mis anuncios</string>
    <string name="menu_publicar_anuncio">Publicar Anuncio</string>
    <string name="menu_mensajes">Mensajes</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>


    <string name="login_correo">Correo</string>
    <string name="login_pass">Contraseña</string>

    <string name="home_second">Home Second</string>

    <string name="nombre_usuario">Inicia Sesión</string>
    <string name="correo_usuario"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
